@@ -5,7 +5,7 @@ GenericName[da]=CD/DVD-brændeprogram
 Comment=Write CD and DVD
 Comment[da]=Brænd CD og DVD
 Exec=gnomebaker
-Icon=@prefix@/share/gnomebaker/gnomebaker-48.png
+Icon=gnomebaker-48
 Terminal=false
 Type=Application
 Categories=Application;AudioVideo;DiscBurning;
