@@ -102,12 +102,10 @@ project_init(Project *project)
     gtk_widget_show(hbox23);
     gtk_container_add(GTK_CONTAINER(alignment13), hbox23);
 
-    GdkPixbuf *image105 = gdk_pixbuf_new_from_file(IMAGEDIR"/gnomebaker-48.png", NULL);
-    GdkPixbuf *pixbuf = gdk_pixbuf_scale_simple(image105, 22, 22, GDK_INTERP_HYPER);
+    GdkPixbuf *pixbuf = gbcommon_get_icon_for_name("gnomebaker-48", 12);
     GtkWidget *image = gtk_image_new_from_pixbuf(pixbuf);
     gtk_widget_show(image);
-    gtk_box_pack_start(GTK_BOX(hbox23), image, FALSE, FALSE, 0);
-    g_object_unref(image105);
+    gtk_box_pack_start(GTK_BOX(hbox23), image, FALSE, FALSE, 0);    
     g_object_unref(pixbuf);
 
     GtkWidget *label258 = gtk_label_new_with_mnemonic(_("_Burn"));
